# plyxal-ai

./: .gitignore  README.md  app.py  plyxal-ai.git  plyxal-ai.ipynb  plyxal_ai.py  plyxalai.ipynb  poetry.toml  pyproject.toml  requirements.txt  scrapy.ipynb  setup.py  setup_log.txt
plyxal_ai/src/plyxal_ai/: plyxal_ai.py
plyxal_ai/src/qwenvl/: qwenvl.py
plyxalai/src/plyxalai/: plyxalai.py
plyxalai/src/qwenvl/: qwenvl.py
src/: __init__.py  plyxal_ai.py
src/agents/: flan_base_agent.py  history_agent.py  memory_agent.py
src/asr/: asr.py
src/llvm/qwen_vl/: qwen_vl.py
src/qwen_14b_chat/: qwen_14b_chat.py
src/qwen_vl_int4/: __init__.py  qwen_vl_int4.py
src/qwent_vl_int4/: __init__.py  qwent_vl_int4.py
src/scripts/: build_blender.py  install_blender.py  symlinks.py
src/scripts/blender/: install_blender.py
src/scripts/environment/: configure.py  poetry_cleaner.py  poetry_installer.py  poetry_manager.py  remove_poetry.py  setup_environment.py  step_formatter.py  symlink_manager.py  symlinks.py
src/scripts/scraper/: python_org_scraper.py
src/services/: chroma_remote.py  chromadb_history_service.py
src/training/: flan_orca_t5_base_trainer.py
src/utils/: object_print.py
sub_projects/: backup-scrapy.ipynb
