[tool.poetry]
name = "plyxal-ai"
version = "0.0.1"
description = "Multimodel/collection framewrok"
license = "Proprietary"
authors = [
    "Paul C. Smith IV <paul.smith.iv@plyxal.com>"
]
readme = "README.md"
homepage = "https://github.com/psmithiv/plyxal-ai"
repository = "https://github.com/psmithiv/plyxal-ai.git"
keywords = ["plyxal", "ai"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: >=3.10.0,<3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

packages = []
include = []

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
transformers = "^4.35.0"
accelerate = "^0.24.1"
tiktoken = "^0.4.0"
einops = "^0.6.1"
transformers-stream-generator = "0.0.4"
scipy = "^1.11.2"
torchvision = "0.15.1"
torch = ">=2.0.0, !=2.0.1"
pillow = "^10.0.0"
tensorboard = "^2.14.0"
matplotlib = "^3.7.2"
gradio = "^4.1.1"
matplotlib-inline = "^0.1.6"
optimum = "^1.13.1"
ipykernel = "^6.25.2"
ipywidgets = "^8.1.1"
tqdm = "^4.66.1"
yaspin = "^3.0.1"
click = "^8.1.7"
scrapy = "^2.10.1"
bs4 = "^0.0.1"
peft = "^0.5.0"
deepspeed = "^0.12.0"
drawnow = "^0.72.5"
hyperyaml = "^0.1"
ffmpeg = "^1.4"
gensim = "^4.3.2"
hyperdb-python = "^0.1.4"
openai = "^1.3.3"
np = "^1.0.2"
chromadb = "^0.4.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
